--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section id="sobre">
             <h2>Quem Sou Eu</h2>
             <div class="sobre-container">
-                <img src="https://placehold.co/300x300/E8D5C4/313131?text=Sua+Foto" alt="Foto do Adestrador" class="profile-pic">
+                <img src="mamaco.jpg" alt="Foto do Adestrador" class="profile-pic">
                 <p>Olá! Sou [Seu Nome], um apaixonado por cães e especialista em comportamento canino. Minha metodologia é baseada 100% no reforço positivo, criando um ambiente de aprendizado divertido e eficaz para o seu cão. Acredito que todo cão pode aprender, e meu objetivo é te dar as ferramentas para entender e se comunicar melhor com seu pet.</p>
             </div>
         </section>
@@ -93,3 +93,4 @@
     <script src="funcional.js"></script>
 </body>
 </html>
+
